--- a/todoapp/views/detail.ejs
+++ b/todoapp/views/detail.ejs
@@ -33,41 +33,9 @@
         </div>
     </nav>
 
-
-    <h4 class="ms-3 my-3">서버에서 가져온 Todo List</h4>
-    <!-- EJS 문법 -->
-    <ul class="list-group">
-        <% for (let i=0; i < posts.length; i++) { %>
-            <li class="list-group-item">
-                <p>글번호 : <%= posts[i]._id %></p>
-                <a href="/detail/<%= posts[i]._id %>"><h4>Todo title : <%= posts[i].title %></h4></a>
-                <p>Todo date : <%= posts[i].date %></p>
-                <button class="del" data-id="<%= posts[i]._id %>">삭제</button>
-            </li>
-        <% } %>
-    </ul>
-
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-
-    <script>
-        $('.del').click((e) => {
-            let postId = e.target.dataset.id; // 글 번호
-            var click = $(this); // 지금 이벤트가 동작하는 것, 클릭한거
-            $.ajax({
-                method: 'DELETE',
-                url: '/delete',
-                data: { _id: postId }
-            }).done((res) => {
-                console.log('성공!');
-                window.location.reload();
-                // click.parent('li').fadeOut(); 이거 왜 안되노 ㅠㅠ
-            }).fail((xhr, textStatus, errorThrown) => {
-                console.log(xhr, textStatus, errorThrown);
-            })
-        })
-
-    </script>
-
+    <h4>상세페이지</h4>
+    <h5>제목 : <%= data.title %> </h5>
+    <h5>날짜 : <%= data.date %> </h5>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
