--- a/todoapp/views/detail.ejs
+++ b/todoapp/views/detail.ejs
@@ -6,36 +6,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/public/main.css">
     <title>Document</title>
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg bg-light">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">Todo App</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/write">Write</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/list">List</a>
-                    </li>
-                </ul>
+    <%- include('nav.html') %>
+
+    <div class="container mt-3">
+        <h4 class="text-center">상세페이지</h4>
+        <div class="card" style="width: 100%;">
+            <div class="card-body">
+                <h5 class="card-title">
+                    <%= data.title %>
+                </h5>
+                <h6 class="card-subtitle mb-2 text-muted">
+                    <%= data.date %>
+                </h6>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                    card's content.</p>
+                <!-- <a href="/edit/<%= data._id %>" class="card-link">수정하기</a> -->
             </div>
         </div>
-    </nav>
-
-    <h4>상세페이지</h4>
-    <h5>제목 : <%= data.title %> </h5>
-    <h5>날짜 : <%= data.date %> </h5>
+    </div>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
