--- a/todoapp/views/write.ejs
+++ b/todoapp/views/write.ejs
@@ -10,28 +10,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg bg-light">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">Todo App</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/write">Write</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/list">List</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
+    <%- include('nav.html') %>
 
     <h4 class="container mt-4"><strong>글 작성페이지</strong></h4>
     <div class="container mt-3">
