env, URL query string, indexing, search index

--- a/todoapp/views/login.ejs
+++ b/todoapp/views/login.ejs
@@ -13,8 +13,25 @@
     <%- include('nav.html') %>
 
     <h4 class="container mt-4"><strong>로그인 페이지</strong></h4>
+
     <div class="container mt-3">
+        <h5>로그인</h5>
         <form action="/login" method="POST">
+            <div class="form-group">
+                <label>ID</label>
+                <input type="text" class="form-control" name="id">
+            </div>
+            <div class="form-group">
+                <label>PW</label>
+                <input type="password" class="form-control" name="pw">
+            </div>
+            <button type="submit" class="btn btn-success">Submit</button>
+        </form>
+    </div>
+
+    <div class="container mt-3">
+        <h5>회원가입</h5>
+        <form action="/register" method="POST">
             <div class="form-group">
                 <label>ID</label>
                 <input type="text" class="form-control" name="id">
